--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ button {
    padding: 10px;
    margin-left: auto;
    margin-right: auto;
+   margin-top: 30px;
    border-radius: 6px;
    border: 1px solid green;
    color: white;
